<resources>
    <string name="app_name">components</string>
    <string name="even_card_status">Reservasi Sekarang</string>
    <string name="event_card_description_title">EDTS Town-Hall 2025: Power of Change</string>
    <string name="event_card_description_date">23 Juli 2025</string>
    <string name="event_card_banner_type">Hybrid Event</string>
    <string name="event_card_banner_category">People Development</string>
    <string name="event_card_divider">·</string>
    <string name="event_card_badge_label">Diundang</string>
    <string name="event_card_iv_content_description">Poster Image</string>
    <string name="option_card_title">Card Title</string>
    <string name="filter_button_iv_content_description">Filter Button</string>
    <string name="bottom_navigation_iv_content_description">Bottom Navigation Icon</string>
    <string name="tab_text">Label</string>
    <string name="bottom_navigation_text">Label</string>
    <string name="badge_text">1</string>
    <string name="card_multi_detail_wrapper_info_01">Info-01</string>
    <string name="card_multi_detail_wrapper_info_02">Info-02</string>
    <string name="card_multi_detail_wrapper_info_divider">Info Divider</string>
    <string name="card_left_slot_image_content_description">Card Image</string>
    <string name="card_right_slot_image_content_view">Card Action</string>
    <string name="card_multi_detail_title">Card Title</string>
    <string name="leave_description_title">Saldo Cuti Tahunan</string>
    <string name="option_card_title">Card Title</string>
  
    <string name="leave_description_title">Saldo Cuti Tahunan</string>
    <string name="leave_balance_format">%d hari</string>
    <string name="leave_expiry_format">Kedaluwarsa: %s</string>
    <string name="leave_used_format">Cuti Terpakai: %d Hari</string>


    //Dummy Data
    <string-array name="countries">
        <item>Indonesia</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Australia</item>
        <item>Canada</item>
    </string-array>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="interests">
        <item>Technology</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Travel</item>
        <item>Reading</item>
        <item>Photography</item>
    </string-array>
</resources>