<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/EventCardBanner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayBlue10"
    android:paddingHorizontal="@dimen/margin_12dp"
    android:paddingVertical="@dimen/margin_4dp">

    <com.google.android.material.textview.MaterialTextView
        style="?attr/l3Medium"
        android:id="@+id/tvEvenCardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/event_card_banner_type"
        android:textColor="?attr/colorForegroundTertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivEvenCardDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="@dimen/margin_4dp"
        android:background="@drawable/divider_dot"
        android:contentDescription="@string/card_multi_detail_wrapper_info_divider"
        android:textColor="?attr/colorForegroundTertiary"
        app:layout_constraintStart_toEndOf="@+id/tvEvenCardType"
        app:layout_constraintTop_toTopOf="@id/tvEvenCardType"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvenCardType"/>

    <com.google.android.material.textview.MaterialTextView
        style="?attr/l3Medium"
        android:id="@+id/tvEvenCardCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/event_card_banner_category"
        android:textColor="?attr/colorForegroundTertiary"
        app:layout_constraintStart_toEndOf="@+id/ivEvenCardDivider"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>